resources/assets/sass/layout/_article.scss
.article-header {
    width: 100%;
    min-height: 200px;
    margin-bottom: 0;
    position: relative;
    img {
        width: 100%;
        vertical-align: middle;
    }
    #sidebar {
        position: absolute;
        top: 30px;
        right: 30px;
        float: none;
        padding: 30px;
        height: auto;
        .title-wrapper {
            position: static;
            background: none;
            margin: 0;
        }
        .sidebox {
            border-top: 1px solid $faded-line;
            padding: 25px 0 0;
            margin-top: 25px;
            &:nth-of-type(1) {
                border-top: 0;
                padding-top: 0;
                margin-top: 0;
            }
        }
        h4 {
            margin-bottom: 20px;
        }
    }
    .title-wrapper {
        position: absolute;
        bottom: 30px;
        left: 30px;
        background: rgba(0,0,0,0.8);
    }
    h1 {
        display: inline-block;
        padding: 10px 25px;
        background: -webkit-linear-gradient(#fff, #bbb);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
    }
}
.post-details {
    display: block;
    color: $font-color-faded;
    font-family: $font-condensed;
    text-transform: uppercase;
    font-size: 13px;
    margin-bottom: 20px;
    line-height: 18px;
}
article {
    padding-bottom: 150px;
    max-width: 800px;
    &:first-child {
        padding-top: 80px;
    }
    .article-wrapper {
        font-size: 110%;
    }
    .article-body {
        p, ul, h1, h2, h3, h4, h5 {
            &:first-child {
                padding-top: 80px;
            }
        }
        ul {
            margin: 20px 0;
            list-style: disc inside;
            li {
                list-style: disc inside;
                line-height: 150%;
                margin-bottom: 15px;
            }
        }
        img {
            max-width: 100%;
            margin: 30px 0;
        }
        blockquote {
            background: $panel-color;
            border-radius: 5px;
            border-left: 5px solid $faded-line;
            margin: 20px 0;
            padding: 15px;
        }
    }
    .article-title {
        padding-top: 30px;
        padding-bottom: 10px;
        &:after {
            display: none;
        }
    }
    .article-details {
        border-bottom: 1px solid $faded-line;
        padding-bottom: 30px;
        margin-bottom: -30px;
    }
    h1,h2,h3 {
        padding-top: 80px;
        &:after {
            content: '';
            display: block;
            width: 70px;
            margin: 20px 0;
            height: 1px;
            border-top: 1px solid $faded-line;
        }
        &.no-line {
            &:after {
                content: none;
            }
        }
    }
    h1 {
        background: -webkit-linear-gradient(#fff, #bbb);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
    }
    p, li {
        line-height: 150%;
        a {
            color: $secondary-highlight;
            &:hover {
                border-bottom: 1px dotted $secondary-highlight;
            }
        }
    }
    .build-tabs {
        margin-top: 20px;
    }
    .builds-wrapper {
        .build-list {
            .preload-container {
                img {
                    width: 113px;
                    height: 150px;
                }
            }
            .placed-card {
                width: 113px !important;
                height: 150px !important;
            }
            li {
                min-width: 113px;
                min-height: 150px;
                width: 113px !important;
                background-size: 113px 150px;
                margin-right: 20px;
                margin-bottom: 0;
            }
        }
    }
}

.toc {
    font-size: 16px;
    color: $font-color-faded;
    a {
        cursor: pointer;
        display: block;
        padding: 5px 10px;
        transition: all 0.2s;
        &:hover {
            padding-left: 15px;
        }
    }
    ul {
        border-left: 3px solid $faded-line;
    }
    li {
        margin: 0;
        list-style: decimal-leading-zero inside;
    }
    ul ul {
        margin-left: 10px;
    }
}@media screen and (max-width: $media-tablet) {

}

@media screen and (max-width: $media-mobile) {
    .article-preview {
        width : 100%;
    }
}

